--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,11 +76,9 @@ flutter:
     - family: SfPro
       fonts:
         - asset: assets/fonts/SFPRODISPLAYMEDIUM.OTF
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
